--- a/erp-quimicos/src/main/webapp/vm/proreporteproduccion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/proreporteproduccion/startup.vm
@@ -33,11 +33,11 @@
                 <td>&nbsp;&nbsp;</td>
                 <td >
                     <div class="repproduccion" >
-                        <table id="filtros" border="1" style="background-color:#ffffff;" >
+                        <table id="filtros" border="0" style="background-color:#ffffff;" >
                             <tr>
                                 <td >&nbsp;</td>
                                 <td>Tipo&nbsp;de&nbsp;Reporte</td>
-                                <td colspan="15">
+                                <td colspan="16">
                                     <SELECT NAME="produccion" style="width:170px;">
                                     <option value="1" selected="yes">Produccion Diaria</option>
                                     <option value="2" >Produccion por Producto</option>
@@ -48,155 +48,56 @@
                                 <td>&nbsp;</td>
                             </tr>
                             <tr>
-                                <td colspan="18">&nbsp;&nbsp;</td>
+                                <td colspan="19">&nbsp;&nbsp;</td>
                             </tr>
                             <tr >
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td >Equipo:</td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td >Operario:</td>
-                                <td>&nbsp;</td>
-                                <td width="70">Fecha&nbsp;Inicial</td>
-                                <td>&nbsp;</td>
-                                <td width="70">Fecha&nbsp;final</td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
+
                                 <td width="80">Codigo&nbsp;Sku</td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="210">Descripcion</td>
-                                <td>&nbsp;</td>
-                                <td width="55">&nbsp;</td>
-                                <td width="50">&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
+
+                                <td>&nbsp;&nbsp;</td>
+
+                                <td>&nbsp;&nbsp;</td>
+                                <td width="70">Fecha&nbsp;Inicial</td>
+                                <td>&nbsp;&nbsp;&nbsp;</td>
+                                <td width="70">Fecha&nbsp;final</td>
+                                <td width="55">&nbsp;&nbsp;</td>
+                                <td width="50">&nbsp;&nbsp;</td>
                                 <td >&nbsp;&nbsp;</td>
-                                <td width="70">&nbsp;</td>
-                                <td >&nbsp;</td>
+                                <td width="70">&nbsp;&nbsp;</td>
+                                <td >&nbsp;&nbsp;</td>
                             </tr>
                             <tr >
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td ><SELECT NAME="equipo" style="width:150px;"></SELECT></td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td ><SELECT NAME="Operario" style="width:270px;"></SELECT></td>
-                                <td>&nbsp;</td>
-                                <td width="70"><INPUT TYPE="text" name="fecha_inicial" style="width:70px;"></td>
-                                <td>&nbsp;</td>
-                                <td width="70"><INPUT TYPE="text" name="fecha_final" style="width:70px;"></td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="80"><input type="text" name="sku_producto" value="" style="width:80px;"></td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="210"><INPUT TYPE="text" name="producto" value="" style="width:210px;"></td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)&nbsp;&nbsp;</a></td>
-                                <td width="50"><INPUT TYPE="button"  value="Buscar"></td>
-                                <td >&nbsp;&nbsp;</td>
-                                <td width="70"><INPUT TYPE="button"  value="Generar_PDF"></td>
-                                <td >&nbsp;</td>
-                            </tr>
-                            <!--<tr id="R_produccion_diaria">
-
-
-                                <td>&nbsp;</td>
-                                <td width="80">Fecha&nbsp;inicial&nbsp;&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="70"><INPUT TYPE="text" name="fecha_inicial" style="width:70px;"></td>
-                                <td width="20">&nbsp;</td>
-                                <td width="80" align="right">Fecha&nbsp;final&nbsp;&nbsp;</td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="70"><INPUT TYPE="text" name="fecha_final" style="width:70px;"></td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Codigo&nbsp;&nbsp;</td>
-                                <td width="80"><input type="text" name="sku_producto" value="" style="width:80px;"></td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Descripcion&nbsp;&nbsp;</td>
-                                <td width="210">
-
-                                    <INPUT TYPE="text" name="producto" value="" style="width:210px;">
-                                </td>
-                                <td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)&nbsp;&nbsp;</a></td>
+                                <td>&nbsp;&nbsp;</td>
                                 <td width="50"><INPUT TYPE="button"  value="Buscar"></td>
-                                <td >&nbsp;&nbsp;</td>
+                                <td >&nbsp;&nbsp;&nbsp;</td>
                                 <td width="70"><INPUT TYPE="button"  value="Generar_PDF"></td>
-                                <td >&nbsp;</td>
-                                <td >&nbsp;</td>
+                                <td >&nbsp;&nbsp;</td>
                             </tr>
 
-                            <tr id="R_produccion_por_producto">
-                                <td >&nbsp;&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td width="80">&nbsp;</td>
-                                <td width="70">&nbsp;</td>
-                                <td width="20">&nbsp;</td>
-                                <td width="80" align="right">&nbsp;</td>
-                                <td width="70">&nbsp;</td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Codigo&nbsp;&nbsp;</td>
-                                <td width="80"><input type="text" name="sku_producto" value="" style="width:80px;"></td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Descripcion&nbsp;&nbsp;</td>
-                                <td width="210">
-
-                                    <INPUT TYPE="text" name="producto" value="" style="width:210px;">
-                                </td>
-                                <td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)&nbsp;&nbsp;</a></td>
-                                <td width="50"><INPUT TYPE="button"  value="Buscar"></td>
-                                <td >&nbsp;&nbsp;</td>
-                                <td width="70"><INPUT TYPE="button"  value="Generar_PDF"></td>
-                                <td >&nbsp;</td>
-                                <td >&nbsp;</td>
-                            </tr>
-                            <tr id="R_produccion_por_Equipo">
-                                <td >&nbsp;&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td width="80">Equipo:&nbsp;</td>
-                                <td >
-                                    <SELECT NAME="equipo" style="width:300px;"></SELECT>
-                                </td>
-                                <td width="20">&nbsp;</td>
-                                <td width="80" align="right">&nbsp;</td>
-                                <td width="70">&nbsp;</td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Codigo&nbsp;&nbsp;</td>
-                                <td width="80"><input type="text" name="sku_producto" value="" style="width:80px;"></td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Descripcion&nbsp;&nbsp;</td>
-                                <td width="210">
-
-                                    <INPUT TYPE="text" name="producto" value="" style="width:210px;">
-                                </td>
-                                <td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)&nbsp;&nbsp;</a></td>
-                                <td width="50"><INPUT TYPE="button"  value="Buscar"></td>
-                                <td >&nbsp;&nbsp;</td>
-                                <td width="70"><INPUT TYPE="button"  value="Generar_PDF"></td>
-                                <td >&nbsp;</td>
-                                <td >&nbsp;</td>
-                            </tr>
-
-                            <tr id="R_produccion_por_Operario">
-                                <td >&nbsp;&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td width="80">Operario:&nbsp;</td>
-                                <td >
-                                    <SELECT NAME="Operario" style="width:300px;"></SELECT>
-                                </td>
-                                <td width="20">&nbsp;</td>
-                                <td width="80" align="right">&nbsp;</td>
-                                <td width="70">&nbsp;</td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Codigo&nbsp;&nbsp;</td>
-                                <td width="80"><input type="text" name="sku_producto" value="" style="width:80px;"></td>
-                                <td width="10">&nbsp;&nbsp;&nbsp;</td>
-                                <td width="20">Descripcion&nbsp;&nbsp;</td>
-                                <td width="210">
-
-                                    <INPUT TYPE="text" name="producto" value="" style="width:210px;">
-                                </td>
-                                <td width="55"><a href="buscar_producto" style="font-size:13px;">(Buscar)&nbsp;&nbsp;</a></td>
-                                <td width="50"><INPUT TYPE="button"  value="Buscar"></td>
-                                <td >&nbsp;&nbsp;</td>
-                                <td width="70"><INPUT TYPE="button"  value="Generar_PDF"></td>
-                                <td >&nbsp;</td>
-                                <td >&nbsp;</td>
-                            </tr>
-
-                            -->
                             <tr>
-                                <td colspan="18">&nbsp;&nbsp;</td>
+                                <td colspan="19">&nbsp;&nbsp;</td>
                             </tr>
                         </table>
                     </div>
