--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -367,7 +367,7 @@
 													<li><a href="../gralfichatecnica/startup.agnux">Ficha Tecnica</a></li>
 												</ul>
 											</li>
-
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
@@ -383,18 +383,18 @@
 													<li class="topline"><a href="../repinvexis/startup.agnux">Inventario</a></li>
 													<li class="topline"><a href="../repinvexislote/startup.agnux">Existencias en Lotes</a></li>
 													<li class="topline"><a href="../repinvkits/startup.agnux">Kits</a></li>
+													<li class="topline"><a href="../repinvmovimientos/startup.agnux">Movimientos</a></li>
 													<!--
 													<li class="topline"><a href="#">Existencias FÃ­sicas Capturadas</a></li>
-													<li class="topline"><a href="#">Movimientos</a></li>
 													-->
 												</ul>
 											</li>
 										</ul>
 									</li>
-
-
-
-
+									
+									
+									
+									
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible">Bancos &raquo;</a>
 										<ul>
