git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@621 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/crmregistrollamadas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrollamadas/startup.vm
@@ -45,14 +45,14 @@
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td width="80">Folio</td>
 				<td width="20"></td>
-				<td width="100">Tipo&nbsp;de&nbsp;Visita</td>
+				<td width="100">Tipo&nbsp;de&nbsp;Llamada</td>
 				<td width="20"></td>
 				<td width="245">Nombre&nbsp;del&nbsp;contacto</td>
 				<td width="20">&nbsp;</td>
 				<td width="200">Agente</td>
 				<td width="20"></td>
 				<td width="25"></td>
-				<td colspan="3">Fecha&nbsp;de&nbsp;Visita</td>
+				<td colspan="3">Fecha&nbsp;de&nbsp;Llamada</td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td></td>
 				<td width="25"></td>
