--- a/erp-quimicos/src/main/webapp/vm/repinvmovimientos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repinvmovimientos/startup.vm
@@ -2,26 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>${title}</title>
-        
+
         #include("${layoutheader}")
-		
-        <!--  css for this catalogo -->
+
+        <!--  css for this catalogo
         <link rel="stylesheet" href="../../css/modalbox/repinvmovimientos/formarepinvmovimientos.css" type="text/css" />
-		
+        -->
+
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/implements/repinvmovimientos/index.js" ></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
-        
+
+        <link rel="stylesheet" href="../../css/modalbox/repinvmovimientos/formaBuscaproducto.css" type="text/css" />
+        <script type="text/javascript" src="../../js/components/modalbox/repinvmovimientos/modalboxBuscaproducto.js"></script>
+        <script type="text/javascript" src="../../js/implements/repinvmovimientos/index.js" ></script>
+
         #include("${layoutmenu}")
-        
+
         <input type="hidden" name="contextpath" value="$url">
         <input type="hidden" name="user" value="$username">
         <input type="hidden" name="iu" value="$iu">
         <input type="hidden" name="emp" value="$empresa">
         <input type="hidden" name="suc" value="$sucursal">
-        
-        
+
+
         <form id="formaRepMov" action="print.json" method="POST" >
         <!--  otra parte -->
         <table class="acciones">
@@ -29,8 +33,8 @@
                 <td>&nbsp;&nbsp;</td>
                 <td ></td>
             </tr>
-            
-            
+
+
             <tr>
                 <td>&nbsp;&nbsp;</td>
                 <td style="background-color:#ffffff;" >
@@ -48,7 +52,7 @@
 							<td width="15">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="200">Nombre del Producto</td>
 							<td width="20"></td>
-							
+
 							<td width="15">&nbsp;</td>
 							<td width="25"></td>
 							<td width="180" colspan="4">Fecha&nbsp;de&nbsp;Movimiento</td>
@@ -62,7 +66,7 @@
 							<td width="15"></td>
 							<td width="50"></td>
 						</tr>
-						
+
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="180">
@@ -81,19 +85,19 @@
 							<td width="15">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="200"><INPUT TYPE="text" name="descripcion" style="width:200px;"></td>
 							<td width="20"><a href="busca_sku" id="buscar_producto">&nbsp;(Buscar)</a></td>
-							
+
 							<td width="15">&nbsp;</td>
 							<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 							<td width="80"><INPUT TYPE="text" id="date"  name="fecha_inicial" style="width:80px;" ></td>
 							<td width="5"></td>
 							<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 							<td width="80"><INPUT TYPE="text" id="date" name="fecha_final" style="width:80px;" ></td>
-							
+
 							<td width="30">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="50"><INPUT TYPE="button" id="boton_busqueda" value="Buscar"></td>
 							<td width="15"></td>
 							<td width="50"><INPUT TYPE="button" id="boton_genera_pdf" value="Generar PDF"></td>
-						</tr>					
+						</tr>
 					</table>
                 </td>
             </tr>
@@ -104,7 +108,7 @@
             <tr>
                 <td>&nbsp;&nbsp;</td>
                 <td>
-					<div> 
+					<div>
 						<table id="table_exis" cellspacing="0">
 							<thead>
 								<tr>
@@ -131,13 +135,13 @@
             </tr>
 		</table>
         </form>
-        
-        
-        
-        
-        
-		
-		<div class="buscador_productos" style="display:none;">	
+
+
+
+
+
+
+	<div class="buscador_productos" style="display:none;">
 			<table width="100%" border="0" class="formaBusqueda_productos">
 				<tr>
 					<td>
@@ -148,26 +152,26 @@
 										<td colspan="8" height="50" valign="top"><div class="titulo_productos" width="100%"><strong>Buscador de productos</strong></div></td>
 									</tr>
 								</thead>
-								
+
 								<tbody>
 									<tr>
 										<td width="10"></td>
 										<td width="10" style="background:#ffffff;"></td>
 										<td colspan="4" style="background:#ffffff;" width="600">
-											
+
 											<table id="tabla_busqueda" border="0"  class="contenidobusqueda">
 												<tr>
 													<td colspan="7" width="600" height="10"></td>
 												</tr>
 												<tr>
 													<td width="70">C&oacute;digo&nbsp;</td>
-													<td width="120"><input type="text" name="campo_sku" style="width:120px;"></td>
+													<td width="120"><INPUT TYPE="text" name="campo_sku" style="width:120px;"></td>
 													<td width="25"></td>
 													<td width="90">Tipo&nbsp;de&nbsp;Producto</td>
 													<td width="200">
-														<select name="tipo_producto" style="width:180px;">
+														<SELECT NAME="tipo_producto" style="width:180px;">
 															<OPTION value="0" selected="yes">[--Seleccionar Tipo--]</OPTION>
-														</select>
+														</SELECT>
 													</td>
 													<td width="25"></td>
 													<td width="90"></td>
@@ -177,36 +181,36 @@
 												</tr>
 												<tr>
 													<td width="70">Descripci&oacute;n</td>
-													<td width="400" colspan="4"><input type="text" name="campo_descripcion" style="width:415px;"></td>
+													<td width="400" colspan="4"><INPUT TYPE="text" name="campo_descripcion" style="width:415px;"></td>
 													<td width="25"></td>
 													<td width="90" align="right">
-														<input type="button" id="busca_producto_modalbox" class="onmouseOutBuscar">
+														<INPUT TYPE="button" id="busca_producto_modalbox" class="onmouseOutBuscar">
 													</td>
 												</tr>
 											</table>
-											
+
 										</td>
 										<td width="10" style="background:#ffffff"></td>
 										<td width="10"></td>
 									</tr>
-									
-									<tr style="font-size:13px;">
+
+									<tr  style="font-size:13px;">
 										<td width="10"></td>
 										<td width="10" style="background:#ffffff"></td>
-										
+
 										<td width="120" style="background:#A8A9AB;">C&oacute;digo&nbsp;</td>
 										<td width="280" style="background:#A8A9AB;">Nombre</td>
 										<td width="90" style="background:#A8A9AB;">Unidad</td>
 										<td width="110" style="background:#A8A9AB;">Tipo</td>
-										
+
 										<td width="10" style="background:#ffffff"></td>
 										<td width="10"></td>
 									</tr>
-									
+
 									<tr>
 										<td width="10"></td>
 										<td width="10" style="background:#ffffff"></td>
-										<td style="background:#ffffff; border: solid 1px #454442;" colspan="4" width="600">
+										<td style="background:#ffffff; border: solid 1px #313E74;" colspan="4" width="600">
 											<div style="overflow:scroll; overflow-x:auto; overflow-y:auto; width:600px; height:120px; align=top;">
 												<table  border="0" id="tabla_resultado" width="580">
 													<!--aqui van los resultados de la busqueda-->
@@ -232,14 +236,14 @@
 									<tr>
 										<td width="10"></td>
 										<td width="10" style="background:#ffffff"></td>
-										
+
 										<td width="120"  style="background:#ffffff"></td>
 										<td width="280" style="background:#ffffff"></td>
 										<td width="90" style="background:#ffffff"></td>
 										<td width="110" style="background:#ffffff" align="right">
-											<input type="button" id="cencela" class="onmouseOutCancelar">
+											<INPUT TYPE="button" id="cencela" class="onmouseOutCancelar">
 										</td>
-										
+
 										<td width="10" style="background:#ffffff"></td>
 										<td width="10"></td>
 									</tr>
@@ -249,21 +253,21 @@
 										<td width="10"></td>
 									</tr>
 								</tbody>
-								
+
 							</table>
 						</div>
 					</td>
 				</tr>
 			</table>
 		</div>
-		
-		
-        
-        
+
+
+
+
         #include("${layoutfooter}")
-        
-        
+
+
     </body>
-</html>	
+</html>
 
 
