--- a/erp-quimicos/src/main/webapp/vm/comfacdevolucion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/comfacdevolucion/startup.vm
@@ -1,4 +1,4 @@
-<!DOCtype html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>${title}</title>
@@ -508,16 +508,16 @@
 									
 									<table id="tabla_busqueda" border="0"  class="contenidobusqueda">
 										<tr>
-											<td colspan="11">&nbsp;</td>
+												<td colspan="11">&nbsp;</td>
 										</tr>
 										<tr>
 											<td width="10"></td>
-											<td width="45">RFC</td>
-											<td width="150"><input type="text" name="campo_rfc" style="width:150px;"></td>
+											<td width="75">No. Proovedor</td>
+											<td width="100"><input type="text" name="campo_no_proveedor" style="width:100px;"></td>
 											<td width="25"></td>
-											<td width="45">E-mail</td>
-											<td width="200"><input type="text" name="campo_email" style="width:200px;"></td>
-											<td width="120"></td>
+											<td width="45">RFC</td>
+											<td width="250"><input type="text" name="campo_rfc" style="width:250px;"></td>
+											<td width="90"></td>
 											<td></td>
 										</tr>
 										<tr>
@@ -525,12 +525,10 @@
 										</tr>
 										<tr>
 											<td width="10"></td>
-											<td width="45">Nombre</td>
+											<td width="75">Razon Social</td>
 											<td colspan="4"><input type="text" name="campo_nombre" style="width:420px;"></td>
-											<td width="120"></td>
-											<td>
-												<input type="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar">
-											</td>
+											<td width="90"></td>
+											<td><input type="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar"></td>
 										</tr>
 									</table>
 									
