--- a/erp-quimicos/src/main/webapp/vm/repestadisticocompras/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repestadisticocompras/startup.vm
@@ -137,27 +137,27 @@
                                         <tr>
                                             <td colspan="11">&nbsp;</td>
                                         </tr>
-                                        <tr>
-                                            <td width="10"></td>
-                                            <td width="45">RFC</td>
-                                            <td width="150"><INPUT TYPE="text" name="campo_rfc" style="width:150px;"></td>
-                                            <td width="25"></td>
-                                            <td width="45">E-mail</td>
-                                            <td width="200"><INPUT TYPE="text" name="campo_email" style="width:200px;"></td>
-                                            <td width="120"></td>
-                                            <td></td>
-                                        </tr>
+										<tr>
+											<td width="10"></td>
+											<td width="75">No. Proovedor</td>
+											<td width="100"><input type="text" name="campo_no_proveedor" style="width:100px;"></td>
+											<td width="25"></td>
+											<td width="45">RFC</td>
+											<td width="250"><input type="text" name="campo_rfc" style="width:250px;"></td>
+											<td width="90"></td>
+											<td></td>
+										</tr>
                                         <tr>
                                             <td colspan="11">&nbsp;</td>
                                         </tr>
                                         <tr>
-                                            <td width="10"></td>
-                                            <td width="45">Nombre</td>
-                                            <td colspan="4"><INPUT TYPE="text" name="campo_nombre" style="width:420px;"></td>
-                                            <td width="120"></td>
-                                            <td>
-                                                <INPUT TYPE="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar">
-                                            </td>
+                                         <td width="10"></td>
+										<td width="75">Razon Social</td>
+										<td colspan="4"><input type="text" name="campo_nombre" style="width:420px;"></td>
+										<td width="90"></td>
+										<td>
+											<input type="button" id="busca_proveedor_modalbox" class="onmouseOutBuscar">
+										</td>
                                         </tr>
                                     </table>
                                 </td>
